Se agrega modelo RN y pruebas Mauro

--- a/TP3/optimizacion_hiperparametros.ipynb
+++ b/TP3/optimizacion_hiperparametros.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "2e342167",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "55bbf0f3",
    "metadata": {
     "scrolled": false
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4db5d96c",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "56964279",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "9c4d27ff",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "30640c5e",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "b0f82c57",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "b25f001a",
    "metadata": {
     "scrolled": false
@@ -327,7 +327,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.4708\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': False, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.59 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 7.53 segundos\n",
       "\n",
       "\n",
       "====================\n",
@@ -337,7 +337,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.4708\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': True, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.62 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.70 segundos\n",
       "\n",
       "\n",
       "====================\n",
@@ -347,7 +347,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.5060\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': False, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.51 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.66 segundos\n",
       "\n",
       "\n",
       "====================\n",
@@ -357,7 +357,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.5060\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': True, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.55 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.67 segundos\n",
       "\n",
       "\n"
      ]
@@ -758,6 +758,68 @@
     "                                 'mejor_score': best_score\n",
     "                                }\n",
     "    print(\"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "150908e4",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Red Neuronal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5a6c891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPRegressor\n",
+    "import numpy as np\n",
+    "\n",
+    "red_neuronal_config = {\n",
+    "    \"modelo\": MLPRegressor(random_state=42, max_iter=1000),\n",
+    "    \"params\": {\n",
+    "        \"hidden_layer_sizes\": [(32,), (64,), (64, 32), (64, 32, 16), (128, 64, 32, 16), (128, 64, 32)],\n",
+    "        \"activation\": [\"relu\"],\n",
+    "        \"solver\": [\"adam\"],\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "054d4c29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultados_nn = {}\n",
+    "\n",
+    "for set_conjuntos, set_dict in datasets_dict.items():\n",
+    "    print(f'====================\\nDataset {set_conjuntos}\\n====================')\n",
+    "    # Convertimos y a 1D para evitar el warning\n",
+    "    y_train = set_dict['y_train'].values.ravel()\n",
+    "    y_test = set_dict['y_test'].values.ravel()\n",
+    "    best_model_nn, best_params_nn, best_score_nn = optimizador_hiperparametros(nombre='Neural_Network',\n",
+    "                                                                      config=red_neuronal_config,\n",
+    "                                                                      X_train=set_dict['x_train'],\n",
+    "                                                                      y_train=set_dict['y_train'],\n",
+    "                                                                      X_val=set_dict['x_test'],\n",
+    "                                                                      y_val=set_dict['y_test'],\n",
+    "                                                                      nombre_dataset=set_conjuntos,\n",
+    "                                                                      metrica='neg_root_mean_squared_error',\n",
+    "                                                                      busqueda='grid',\n",
+    "                                                                      random_state=42,\n",
+    "                                                                      n_iter=20,\n",
+    "                                                                      n_jobs=multiprocessing.cpu_count())\n",
+    "    resultados_nn[set_conjuntos] = {'mejor_modelo' : best_model_nn,\n",
+    "                                 'mejores_params' : best_params_nn,\n",
+    "                                 'mejor_score' : best_score_nn\n",
+    "                                }\n",
+    "    print(\"\\n\")"
    ]
   }
  ],
