Se actualiza TOC

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -20,22 +20,25 @@
    "source": [
     "## Tabla de Contenidos\n",
     "\n",
-    "0. [Importación de librerías y datasets](#0.-Importaci%C3%B3n-de-librer%C3%ADas-y-datasets)\n",
-    "1. [Visualización de los datasets](#1.-Visualizaci%C3%B3n-de-los-datasets)\n",
-    "    1. [Visualización rápida de una muestra de cada dataset](#1.A.-Visualizaci%C3%B3n-r%C3%A1pida-de-una-muestra-de-cada-dataset)\n",
-    "    2. [Tipos de datos y Descripciones Estadísticas de las Variables](#1.B.-Tipos-de-datos-y-Descripci%C3%B3n-Estad%C3%ADstica-de-las-Variables)\n",
+    "0. [Importación de librerías y datasets](#0.-Importación-de-librerías-y-datasets)\n",
+    "1. [Visualización de los datasets](#1.-Visualización-de-los-datasets)\n",
+    "    1. [Visualización rápida de una muestra de cada dataset](#1.A.-Visualización-rápida-de-una-muestra-de-cada-dataset)\n",
+    "    2. [Tipos de datos y Descripciones Estadísticas de las Variables](#1.B.-Tipos-de-datos-y-Descripción-Estadística-de-las-Variables)\n",
     "    3. [Estructura de datos faltantes](#1.C.-Estructura-de-datos-faltantes)\n",
     "    4. [Valores outliers](#1.D.-Valores-outliers)\n",
-    "    5. [Verificación de Existencia de Muestras Repetidas](#1.E.-Verificaci%C3%B3n-de-Existencia-de-Muestas-Repetidas)\n",
-    "2. [Modelos de Regresión](#2.-Modelos-de-Regresi%C3%B3n)\n",
-    "    1. [Regresión Polinómica](#2.A.-Regresi%C3%B3n-Polin%C3%B3mica)\n",
-    "    2. [Ajuste Polinómico con LASSO](#2.B.-Ajusto-Polin%C3%B3mico-con-LASSO)\n",
-    "    3. [Algoritmos Basados en Árboles de Decisión](#2.C.-Algoritmos-Basados-en-%C3%81rboles-de-Decisi%C3%B3n)\n",
+    "    5. [Verificación de Existencia de Muestras Repetidas](#1.E.-Verificación-de-Existencia-de-Muestas-Repetidas)\n",
+    "2. [Modelos de Regresión](#2.-Modelos-de-Regresión)\n",
+    "    1. [Regresión Polinómica](#2.A.-Regresión-Polinómica)\n",
+    "    2. [Ajuste Polinómico con LASSO](#2.B.-Ajusto-Polinómico-con-LASSO)\n",
+    "    3. [Algoritmos Basados en Árboles de Decisión](#2.C.-Algoritmos-Basados-en-Árboles-de-Decisión)\n",
     "        1. [Random Forest](#2.C.a.-Random-Forest)\n",
     "        2. [Boosting](#2.C.b.-Boosting)\n",
     "    4. [Redes Neuronales](#2.D.-Redes-Neuronales)\n",
-    "3. [Métricas](#3.-M%C3%A9tricas)\n",
-    "4. [Selección de Modelo](#4.-Selecci%C3%B3n-de-Modelo)"
+    "3. [Métricas](#3.-Métricas)\n",
+    "4. [Selección de Modelo](#4.-Selección-de-Modelo)\n",
+    "5. [Entrenamiento del Modelo Final](#5.-Entrenamiento-del-Modelo-Final)\n",
+    "6. [Utilización de Datos Satelitales para Complementar la Base de Datos](#6.-Utilización-de-Datos-Satelitales-para-Complementar-la-Base-de-Datos)\n",
+    "7. [Resultados Finales y Conclusiones](#7.-Resultados-Finales-y-Conclusiones)"
    ]
   },
   {
@@ -6089,7 +6092,7 @@
    "id": "7f839a60",
    "metadata": {},
    "source": [
-    "### 1.E. Verificación de Existencia de Muestas Repetidas\n",
+    "### 1.E. Verificación de Existencia de Muestras Repetidas\n",
     "\n",
     "Verificamos si existen muestras repetidas. Lo hacemos excluyendo la columna de la variable objetivo 'ica'."
    ]
@@ -6393,7 +6396,12 @@
     "    - subsample: 0.6, 0.8, 1.0\n",
     "    - colsample_bytree: 0.6, 0.8, 1.0\n",
     "    - reg_alpha: 0, 0.1, 1, 10 (L1 regularization)\n",
-    "    - reg_lambda: 1, 10, 50 (L2 regularization)"
+    "    - reg_lambda: 1, 10, 50 (L2 regularization)\n",
+    "\n",
+    "- **Red Neuronal**\n",
+    "    - hidden_layer_sizes: (32,), (64,), (64, 32), (64, 32, 16), (128, 64, 32, 16), (128, 64, 32)\n",
+    "    - activation: relu\n",
+    "    - solver: adam"
    ]
   },
   {
