Se agregan secciones y resultados Random Forest

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -6207,7 +6207,29 @@
    "id": "b30252c2",
    "metadata": {},
    "source": [
-    "#### 2.C.a. Random Forest"
+    "#### 2.C.a. Random Forest\n",
+    "\n",
+    "Está formado por múltiples árboles de decisión individuales. Cada uno de estos árboles es entrenado con una muestra ligeramente diferente de los datos de entrenamiento, generada mediante una técnica conocida como bootstrapping. Al realizar predicciones sobre nuevas observaciones, los resultados de todos los árboles se combinan en problemas de clasificación a través de votación mayoritaria, y en problemas de regresión mediante el promedio de las salidas.\n",
+    "\n",
+    "Tiene como ventaja:\n",
+    "\n",
+    "- La capaces de seleccionar predictores más relevantes de forma automática.\n",
+    "- Pueden aplicarse a problemas de regresión y clasificación.\n",
+    "- Los árboles pueden, manejar tanto predictores numéricos como categóricos sin tener que crear variables dummy o one-hot-encoding. En la práctica, esto depende de la implementación del algoritmo que tenga cada librería.\n",
+    "- Es muy útil en la exploración de datos, permite identificar de forma rápida y eficiente las variables (predictores) más importantes.\n",
+    "- Es adecuado para conjuntos de datos con un gran número de observaciones, demostrando una buena escalabilidad.\n",
+    "\n",
+    "Tiene como desventaja:\n",
+    "\n",
+    "- La combinación de múltiples árboles reduce la capacidad de interpretación en comparación con modelos basados en un solo árbol.\n",
+    "- Al tratar con predictores continuos, se puede perder parte de la información al categorizarlos durante la división de los nodos.\n",
+    "- La técnica de recursive binary splitting utilizada para crear las ramificaciones de los árboles puede favorecer a los predictores continuos o cualitativos con muchos niveles, ya que tienen una mayor probabilidad de contener un punto de corte óptimo por azar.\n",
+    "\n",
+    "En el caso de la clasificación, el modelo recibe el nombre de Random Forest Classifier y se emplea para predecir variables categóricas. La predicción final se obtiene mediante un mecanismo de votación mayoritaria entre todos los árboles del bosque.\n",
+    "\n",
+    "Por su parte, cuando se trabaja con variables continuas, se utiliza el Random Forest Regressor, orientado a resolver problemas de regresión. En este escenario, la predicción final corresponde al promedio de las salidas de todos los árboles, en lugar de una votación.\n",
+    "\n",
+    "Se eligio para prueba el modelo Random Forest Regressor en el cual se ensayaron diferentes valores del hiperparámetro n_estimators, correspondiente a la cantidad de árboles en el bosque. En particular, se evaluaron configuraciones con 100, 500 y 800 árboles, con el objetivo de analizar el impacto de este parámetro en el desempeño del modelo."
    ]
   },
   {
@@ -6398,10 +6420,15 @@
     "    - reg_alpha: 0, 0.1, 1, 10 (L1 regularization)\n",
     "    - reg_lambda: 1, 10, 50 (L2 regularization)\n",
     "\n",
-    "- **Red Neuronal**\n",
+    "- **Red Neuronal:**\n",
     "    - hidden_layer_sizes: (32,), (64,), (64, 32), (64, 32, 16), (128, 64, 32, 16), (128, 64, 32)\n",
     "    - activation: relu\n",
-    "    - solver: adam"
+    "    - solver: adam\n",
+    "\n",
+    "- **Random Forest:**\n",
+    "    - n_estimators: 100, 500, 800\n",
+    "    - max_depth: None, 5, 10\n",
+    "    - min_samples_split: 2, 5, 10"
    ]
   },
   {
@@ -6414,9 +6441,11 @@
     "| Modelo               | Parámetros óptimos                                                                 | Dataset        | RSME total |\n",
     "|-----------------------|------------------------------------------------------------------------------------|----------------|------------|\n",
     "| Regresión polinómica + XGBoost | n_estimators: 100<br>max_depth: 7<br>learning_rate: 0.1<br>subsample: 0.8<br>colsample_bytree: 1.0<br>reg_alpha: 0.1<br>reg_lambda: 1 | A estandarizado | 6.3140 |\n",
+    "| Random Forest | n_estimators: 800<br>max_depth: None<br>min_samples_split: 2 | B estandarizado | 6.9578 |\n",
     "| Regresión polinómica + LASSO | degree: 1<br>interaction_only: True<br>include_bias: True<br>positive: False<br>alpha: 0.1 | A estandarizado | 10.3910 |\n",
     "| <span style=\"color:red\">Regresión polinómica</span> | <span style=\"color:red\">degree: 1<br>interaction_only: True<br>include_bias: True</span><br><span style=\"color:red\">positive: False</span> | <span style=\"color:red\">A estandarizado</span> | <span style=\"color:red\">10.4708</span> |\n",
     "| Red Neuronal | hidden_layer_sizes: (64,)<br>activation: relu<br>solver: adam | A estandarizado | 10.5805 |\n",
+    "|                       |                                                                                    |                |            |\n",
     "\n",
     "<span style=\"color:red\">En rojo</span> el modelo base."
    ]
