--- a/TP3/optimizacion_hiperparametros.ipynb
+++ b/TP3/optimizacion_hiperparametros.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2e342167",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,9 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import get_scorer\n",
     "from xgboost import XGBRegressor\n",
-    "import numpy as np"
+    "from sklearn.neural_network import MLPRegressor\n",
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
@@ -272,6 +274,7 @@
    "id": "0e460389",
    "metadata": {},
    "source": [
+    "---\n",
     "## Ejemplos de uso"
    ]
   },
@@ -305,7 +308,7 @@
     "        \"poly__include_bias\": [True, False],\n",
     "        \"linreg__positive\": [True, False]\n",
     "    }\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -323,11 +326,17 @@
       "====================\n",
       "Dataset A_scaled\n",
       "====================\n",
-      "🚀 Iniciando entrenamiento para: Regresor_Polinomico\n",
+      "🚀 Iniciando entrenamiento para: Regresor_Polinomico\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.4708\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': False, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 7.53 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 6.26 segundos\n",
       "\n",
       "\n",
       "====================\n",
@@ -337,7 +346,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.4708\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': True, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.70 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.81 segundos\n",
       "\n",
       "\n",
       "====================\n",
@@ -347,7 +356,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.5060\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': False, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.66 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.51 segundos\n",
       "\n",
       "\n",
       "====================\n",
@@ -357,7 +366,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.5060\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': True, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.67 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.65 segundos\n",
       "\n",
       "\n"
      ]
@@ -392,6 +401,7 @@
    "id": "699dbaaa",
    "metadata": {},
    "source": [
+    "---\n",
     "### LASSO"
    ]
   },
@@ -776,8 +786,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neural_network import MLPRegressor\n",
-    "import numpy as np\n",
     "\n",
     "red_neuronal_config = {\n",
     "    \"modelo\": MLPRegressor(random_state=42, max_iter=1000),\n",
@@ -819,6 +827,112 @@
     "                                 'mejores_params' : best_params_nn,\n",
     "                                 'mejor_score' : best_score_nn\n",
     "                                }\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a55aabda",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a1415b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "rf_config = {\n",
+    "    \"modelo\": RandomForestRegressor(random_state=42),\n",
+    "    \"params\": {\n",
+    "        \"n_estimators\": [100, 500, 800],\n",
+    "        \"max_depth\": [None, 5, 10],\n",
+    "        \"min_samples_split\": [2, 5, 10],\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e94d17cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================\n",
+      "Dataset A_scaled\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: RandomForest\n",
+      "✅ RandomForest: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.9764\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 800, 'max_depth': None, 'min_samples_split': 2}\n",
+      "⏱️ Tiempo entrenando RandomForest: 51.00 segundos\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Dataset A_std\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: RandomForest\n",
+      "✅ RandomForest: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.9902\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 800, 'max_depth': None, 'min_samples_split': 2}\n",
+      "⏱️ Tiempo entrenando RandomForest: 50.11 segundos\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Dataset B_scaled\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: RandomForest\n",
+      "✅ RandomForest: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.9717\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 800, 'max_depth': None, 'min_samples_split': 2}\n",
+      "⏱️ Tiempo entrenando RandomForest: 49.28 segundos\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Dataset B_std\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: RandomForest\n",
+      "✅ RandomForest: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.9578\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 800, 'max_depth': None, 'min_samples_split': 2}\n",
+      "⏱️ Tiempo entrenando RandomForest: 49.20 segundos\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultados = {}\n",
+    "\n",
+    "for set_conjuntos, set_dict in datasets_dict.items():\n",
+    "    print(f'====================\\nDataset {set_conjuntos}\\n====================')\n",
+    "    best_model, best_params, best_score = optimizador_hiperparametros(\n",
+    "                                              nombre='RandomForest',\n",
+    "                                              config=rf_config,\n",
+    "                                              X_train=set_dict['x_train'],\n",
+    "                                              y_train=set_dict['y_train'].values.ravel(),\n",
+    "                                              X_val=set_dict['x_test'],\n",
+    "                                              y_val=set_dict['y_test'].values.ravel(),\n",
+    "                                              nombre_dataset=set_conjuntos,\n",
+    "                                              metrica='neg_root_mean_squared_error',\n",
+    "                                              busqueda='grid',   # grid para probar todas las combinaciones\n",
+    "                                              random_state=42,\n",
+    "                                              n_iter=20,\n",
+    "                                              n_jobs=4)\n",
+    "    resultados[set_conjuntos] = {\n",
+    "        'mejor_modelo' : best_model,\n",
+    "        'mejores_params' : best_params,\n",
+    "        'mejor_score' : best_score\n",
+    "    }\n",
     "    print(\"\\n\")"
    ]
   }
