Se re entrena modelo y se realiza test

--- a/TP3/testing/XGBoost/XGBoost_model_test.ipynb
+++ b/TP3/testing/XGBoost/XGBoost_model_test.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "627b4b87",
    "metadata": {},
    "outputs": [],
    "source": [
     "import joblib\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import mean_squared_error, r2_score"
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "1c7f560d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bf66cd57",
    "metadata": {},
    "outputs": [
@@ -44,10 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A_scaled -> MSE: 39.8670, R2: 0.7090\n",
-      "A_std -> MSE: 39.8670, R2: 0.7090\n",
-      "B_scaled -> MSE: 40.5601, R2: 0.7040\n",
-      "B_std -> MSE: 40.5601, R2: 0.7040\n"
+      "A_std -> MSE: 0.1137, RMSE: 0.3372, R2: 0.9992\n"
      ]
     }
    ],
@@ -56,40 +54,41 @@
     "# Función de evaluación\n",
     "# =====================\n",
     "def evaluar_modelo(model_path, X_test, y_test, nombre):\n",
+    "    # Load model\n",
     "    model = joblib.load(model_path)\n",
+    "    \n",
+    "    # Make predictions\n",
     "    y_pred = model.predict(X_test)\n",
     "\n",
+    "    # Metrics\n",
     "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    rmse = np.sqrt(mse)\n",
     "    r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "    print(f\"{nombre} -> MSE: {mse:.4f}, R2: {r2:.4f}\")\n",
-    "    return {\"dataset\": nombre, \"MSE\": mse, \"R2\": r2}\n",
+    "    # Print results\n",
+    "    print(f\"{nombre} -> MSE: {mse:.4f}, RMSE: {rmse:.4f}, R2: {r2:.4f}\")\n",
+    "\n",
+    "    # Return as dictionary\n",
+    "    return {\n",
+    "        \"dataset\": nombre,\n",
+    "        \"MSE\": mse,\n",
+    "        \"RMSE\": rmse,\n",
+    "        \"R2\": r2\n",
+    "    }\n",
     "\n",
     "# =====================\n",
     "# Evaluaciones\n",
     "# =====================\n",
     "resultados = []\n",
     "\n",
-    "# Dataset A - scaled\n",
-    "resultados.append(evaluar_modelo(\"../../models/XGBoost_A_scaled.joblib\",\n",
-    "                                 X_A_test_scaled, y_A_test, \"A_scaled\"))\n",
-    "\n",
     "# Dataset A - std\n",
-    "resultados.append(evaluar_modelo(\"../../models/XGBoost_A_std.joblib\",\n",
-    "                                 X_A_test_std, y_A_test, \"A_std\"))\n",
-    "\n",
-    "# Dataset B - scaled\n",
-    "resultados.append(evaluar_modelo(\"../../models/XGBoost_B_scaled.joblib\",\n",
-    "                                 X_B_test_scaled, y_B_test, \"B_scaled\"))\n",
-    "\n",
-    "# Dataset B - std\n",
-    "resultados.append(evaluar_modelo(\"../../models/XGBoost_B_std.joblib\",\n",
-    "                                 X_B_test_std, y_B_test, \"B_std\"))\n"
+    "resultados.append(evaluar_modelo(\"./xgboost_final_A.joblib\",\n",
+    "                                 X_A_test_std, y_A_test, \"A_std\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "d186c13c",
    "metadata": {},
    "outputs": [
@@ -99,11 +98,8 @@
      "text": [
       "\n",
       "Resumen comparativo:\n",
-      "    dataset        MSE        R2\n",
-      "0  A_scaled  39.866962  0.709039\n",
-      "1     A_std  39.866962  0.709039\n",
-      "2  B_scaled  40.560081  0.703980\n",
-      "3     B_std  40.560081  0.703980\n"
+      "  dataset       MSE      RMSE       R2\n",
+      "0   A_std  0.113682  0.337168  0.99917\n"
      ]
     }
    ],
