Agrego test del modelo

--- a/TP3/testing/XGBoost/XGBoost_train_best_model.ipynb
+++ b/TP3/testing/XGBoost/XGBoost_train_best_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0110cf3c",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,6 @@
     "import joblib\n",
     "import pandas as pd\n",
     "\n",
-    "# Supongamos que estos fueron los mejores parámetros encontrados\n",
     "best_params = {\n",
     "    \"n_estimators\": 100,\n",
     "    \"max_depth\": 7,\n",
@@ -67,9 +66,7 @@
     "final_model.fit(X_all, y_all)\n",
     "\n",
     "# Guardar modelo final\n",
-    "joblib.dump(final_model, \"xgboost_final_A.joblib\")\n",
-    "\n",
-    "print(\"Modelo final reentrenado y guardado como xgboost_final_A.joblib\")\n"
+    "joblib.dump(final_model, \"xgboost_final_A.joblib\")"
    ]
   }
  ],
