Se agrega conclusion final

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -6328,7 +6328,6 @@
     "| Regresión polinómica + LASSO | degree: 1<br>interaction_only: True<br>include_bias: True<br>positive: False<br>alpha: 0.1 | A estandarizado | 10.3910 |\n",
     "| <span style=\"color:red\">Regresión polinómica</span> | <span style=\"color:red\">degree: 1<br>interaction_only: True<br>include_bias: True</span><br><span style=\"color:red\">positive: False</span> | <span style=\"color:red\">A estandarizado</span> | <span style=\"color:red\">10.4708</span> |\n",
     "| Red Neuronal | hidden_layer_sizes: (64,)<br>activation: relu<br>solver: adam | A estandarizado | 10.5805 |\n",
-    "|                       |                                                                                    |                |            |\n",
     "\n",
     "<span style=\"color:red\">En rojo</span> el modelo base."
    ]
@@ -6338,6 +6337,7 @@
    "id": "8087746e",
    "metadata": {},
    "source": [
+    "---\n",
     "## 5. Entrenamiento del Modelo Final\n",
     "\n",
     "A partir de los resultados anteriores optamos por el modelo XGBoost con el que se obtuvo el menor valor RMSE con los parámetros óptimos.\n",
@@ -6386,9 +6386,22 @@
    "id": "77e2e66e",
    "metadata": {},
    "source": [
+    "---\n",
     "## 6. Utilización de Datos Satelitales para Complementar la Base de Datos\n",
     "\n",
-    "Se desarrolló un análisis complementario a partir de datos satelitales que puede observarse en el siguiente notebook: `TP3_MMFE_COMPLEMENTARIO.ipynb`"
+    "Se desarrolló un análisis complementario a partir de datos satelitales que puede observarse en el siguiente notebook: `TP3_MMFE_COMPLEMENTARIO.ipynb`\n",
+    "\n",
+    "### Conclusión análisis satelital\n",
+    "\n",
+    "En este trabajo se demuestra que no todas las variables medidas en una estación de monitoreo tienen la misma relevancia para evaluar la calidad del agua. Si bien todas aportan información, la clorofila-a se destaca como uno de los indicadores más importantes, ya que refleja directamente los procesos de eutrofización y el estado ecológico del sistema. En contraste, parámetros como la turbidez y la temperatura cumplen un rol complementario, aportando contexto a la interpretación de los resultados.\n",
+    "\n",
+    "El índice de calidad de agua aplicado, adaptado a los datos disponibles, logra representar de manera razonable los parámetros críticos medidos en las estaciones. Sin embargo, presenta la limitación de considerar menos variables que el ICA-NSF original. Aun así, se observan tendencias claras: la calidad del agua está fuertemente condicionada por la estacionalidad, con valores muy bajos de clorofila en 2021 y aumentos significativos en los años siguientes, sobre todo durante el invierno y la primavera.\n",
+    "\n",
+    "Aunque este conjunto de datos no incluye información poblacional, resulta evidente que la presión demográfica y antrópica en las áreas costeras del Río de la Plata se relaciona indirectamente con la calidad del agua, al influir en las cargas de nutrientes y en la generación de condiciones menos favorables.\n",
+    "\n",
+    "Todavía queda mucho por analizar y probar. Se requiere tiempo y dedicación para un estudio más profundo que incorpore nuevas variables y técnicas. No obstante, el tema resulta sumamente interesante y abre un campo de investigación prometedor, tanto para el ámbito académico como para la gestión ambiental.\n",
+    "\n",
+    "En definitiva, la calidad del análisis depende directamente de la calidad de la información de base."
    ]
   },
   {
@@ -6396,7 +6409,24 @@
    "id": "814a5006",
    "metadata": {},
    "source": [
+    "---\n",
     "## 7. Resultados Finales y Conclusiones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "072632c4",
+   "metadata": {},
+   "source": [
+    "En las secciones 4 y 5, llevamos a cabo un proceso para seleccionar el mejor modelo para nuestro problema de regresión. Evaluamos cinco modelos diferentes: regresión polinómica básica, regresión polinómica con LASSO, XGBoost, redes neuronales y Random Forest, buscando los hiperparámetros óptimos para cada uno mediante random search y el mejor dataset para cada modelo.\n",
+    "\n",
+    "Los resultados muestran que XGBoost con el dataset A estandarizado alcanzó un RMSE de 6.3140 sobre el conjunto de testeo. Para evaluar si este rendimiento es aceptable, comparamos este valor con la media de la variable ICA que es de 45.26. El RMSE representa aproximadamente un 14% de la media del ICA, lo que indica un resultado relativamente bueno ya que el error promedio es considerablemente menor que el valor típico de la variable objetivo. Esta combinación resultó ser la ganadora del proceso de selección.\n",
+    "\n",
+    "Es interesante notar que el dataset A estandarizado fue consistentemente el que mejor funcionó para la mayoría de los modelos, sugiriendo que esta versión de los datos captura mejor los patrones subyacentes del problema.\n",
+    "\n",
+    "Random Forest mostró un desempeño similar con un RMSE de 6.9578, posicionándose como una alternativa viable, aunque ligeramente inferior. Sin embargo, tanto la regresión polinómica (con y sin LASSO) como las redes neuronales mostraron un rendimiento significativamente peor, con valores de RMSE superiores a 10. Esto sugiere que la naturaleza no lineal y compleja de los datos se beneficia más de los métodos basados en árboles de decisión que de los enfoques lineales o las redes neuronales con las arquitecturas probadas.\n",
+    "\n",
+    "La decisión de reentrenar el modelo XGBoost final incorporando también los datos de prueba permitió aprovechar toda la información disponible para obtener el mejor desempeño posible. Como resultado, se alcanzó un RMSE de 0.3372 en el conjunto de evaluación final. Si se compara este valor con la media del ICA (45.26), el error corresponde apenas al 0.74% de dicha media, lo que evidencia un error promedio muy reducido en relación con la magnitud típica de la variable objetivo."
    ]
   }
  ],
