Agrego prueba comparación modelos

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -6334,51 +6334,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8087746e",
+   "id": "993ac1d6",
    "metadata": {},
    "source": [
     "---\n",
-    "## 5. Entrenamiento del Modelo Final\n",
-    "\n",
-    "A partir de los resultados anteriores optamos por el modelo XGBoost con el que se obtuvo el menor valor RMSE con los parámetros óptimos.\n",
-    "\n",
-    "Por otro lado, se decide re-entrenar dicho modelo incluyendo los datos de test también. Ver desarrollo en notebook `.TP3/testing/XGBoost/XGBoost_train_best_model.ipynb`\n",
-    "\n",
-    "Finalmente se evalua este modelo con el dataset A Standard obteniendo los siguientes resultados:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c63ff0d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_std -> MSE: 0.1137, RMSE: 0.3372, R2: 0.9992\n"
-     ]
-    }
-   ],
-   "source": [
-    "def evaluar_modelo(model_path, X_test, y_test, nombre):\n",
-    "    # Load model\n",
-    "    model = joblib.load(model_path)\n",
-    "    \n",
-    "    # Make predictions\n",
-    "    y_pred = model.predict(X_test)\n",
-    "\n",
-    "    # Metrics\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    rmse = np.sqrt(mse)\n",
-    "    r2 = r2_score(y_test, y_pred)\n",
-    "\n",
-    "    # Print results\n",
-    "    print(f\"{nombre} -> MSE: {mse:.4f}, RMSE: {rmse:.4f}, R2: {r2:.4f}\")\n",
-    "\n",
-    "\n",
-    "evaluar_modelo(\"./models/xgboost_final_A.joblib\", X_A_test_std, y_A_test, \"A_std\")"
+    "## 5. Desempeño en trainset de los modelos\n",
+    "\n"
    ]
   },
   {
@@ -6424,9 +6385,7 @@
     "\n",
     "Es interesante notar que el dataset A estandarizado fue consistentemente el que mejor funcionó para la mayoría de los modelos, sugiriendo que esta versión de los datos captura mejor los patrones subyacentes del problema.\n",
     "\n",
-    "Random Forest mostró un desempeño similar con un RMSE de 6.9578, posicionándose como una alternativa viable, aunque ligeramente inferior. Sin embargo, tanto la regresión polinómica (con y sin LASSO) como las redes neuronales mostraron un rendimiento significativamente peor, con valores de RMSE superiores a 10. Esto sugiere que la naturaleza no lineal y compleja de los datos se beneficia más de los métodos basados en árboles de decisión que de los enfoques lineales o las redes neuronales con las arquitecturas probadas.\n",
-    "\n",
-    "La decisión de reentrenar el modelo XGBoost final incorporando también los datos de prueba permitió aprovechar toda la información disponible para obtener el mejor desempeño posible. Como resultado, se alcanzó un RMSE de 0.3372 en el conjunto de evaluación final. Si se compara este valor con la media del ICA (45.26), el error corresponde apenas al 0.74% de dicha media, lo que evidencia un error promedio muy reducido en relación con la magnitud típica de la variable objetivo."
+    "Random Forest mostró un desempeño similar con un RMSE de 6.9578, posicionándose como una alternativa viable, aunque ligeramente inferior. Sin embargo, tanto la regresión polinómica (con y sin LASSO) como las redes neuronales mostraron un rendimiento significativamente peor, con valores de RMSE superiores a 10. Esto sugiere que la naturaleza no lineal y compleja de los datos se beneficia más de los métodos basados en árboles de decisión que de los enfoques lineales o las redes neuronales con las arquitecturas probadas.\n"
    ]
   }
  ],
